--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "arco-murray-task",
   "version": "0.1.0",
+  "homepage": "http://tabulated-data.omar-ibrahim.com/",
   "private": true,
   "dependencies": {
     "@tanstack/react-query": "^4.15.0",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
